# grpc_demo_workspace

./: README.md  go.work.sum
client/: go.mod  main.go
client_python/: main.py  pyproject.toml
client_python/proto/: demo_grpc_pb2.py  demo_grpc_pb2.pyi  demo_grpc_pb2_grpc.py
server/: go.mod  main.go
server/proto/: demo_grpc.pb.go  demo_grpc.proto  demo_grpc_grpc.pb.go
